--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body {
   text-align: center;
   color: #848ead;
 }
+#range {
+  height: 15px;
+ 
+}
 .main-div {
   border-radius: 8px;
   box-shadow: 0px 20px 30px -5px rgb(127 137 185 / 15%);
